force-app/main/default/objects/CustMergeReq__c/CustMergeReq__c.object-meta.xml
<CustomObject>
    <description>to be used load data related to merged requests. A schedule job will pick these records and perform Customer profile merge.</description>
    <label>Customer Merge Request</label>
    <nameField>
        <displayFormat>MR-{0}</displayFormat>
        <label>Merge Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Merge Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>