force-app/main/default/objects/CustMergeReq__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error message to be logged in this field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>