force-app/main/default/objects/CustMergeReq__c/fields/Failed__c.field-meta.xml
<CustomField>
    <fullName>Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if processing is Failed</description>
    <label>Failed</label>
    <type>Checkbox</type>
</CustomField>