force-app/main/default/objects/CustMergeReq__c/fields/Loser__c.field-meta.xml
<CustomField>
    <fullName>Loser__c</fullName>
    <description>externalid__c  of  Loser customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Loser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>