force-app/main/default/objects/CustMergeReq__c/fields/Merge_Type__c.field-meta.xml
<CustomField>
    <fullName>Merge_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Merge Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>