force-app/main/default/objects/CustMergeReq__c/fields/Merged__c.field-meta.xml
<CustomField>
    <fullName>Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to update after merge process is completed</description>
    <label>Merged ?</label>
    <type>Checkbox</type>
</CustomField>