force-app/main/default/objects/CustMergeReq__c/fields/Merged_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Merged_Date_Time__c</fullName>
    <description>Timestamp when Merge happened in MDM</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Merged Date/Time</label>
    <type>DateTime</type>
</CustomField>