force-app/main/default/objects/CustMergeReq__c/fields/ProcessedTime__c.field-meta.xml
<CustomField>
    <fullName>ProcessedTime__c</fullName>
    <description>Date/timestamp when customer merge process completed in Salesforce core.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Processed Time</label>
    <type>DateTime</type>
</CustomField>