force-app/main/default/objects/CustMergeReq__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <description>externalid__c  of Winner customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Winner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>