force-app/main/default/objects/CustMergeReq__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Winner__c</columns>
    <columns>Loser__c</columns>
    <columns>Merge_Type__c</columns>
    <columns>Failed__c</columns>
    <columns>Error__c</columns>
    <columns>Merged__c</columns>
    <columns>Merged_Date_Time__c</columns>
    <columns>ProcessedTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>